# poppi-client

./: pyproject.toml
poppi_client/: client.py  rag.py  retriever.py
